--- a/SendNotice/SendNotice.csproj
+++ b/SendNotice/SendNotice.csproj
@@ -14,6 +14,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3" />
+    <PackageReference Include="Twilio" Version="5.41.0" />
   </ItemGroup>
 
 
